# triton

./: .gitignore  CONVENTIONS.md  README.md  WORKFLOW.md  setup.sh
assets/: firmware-system-draw-io.xml  (+8 more)
src/svm_opencv/: CMakeLists.txt  package.xml  precision_opencv_model.xml  recall_opencv_model.xml
src/svm_opencv/src/: svm_opencv.cpp
src/triton_controls/: CMakeLists.txt  README.md  package.xml
src/triton_controls/config/: state_estimator_config.yaml  state_estimator_config_GT_only.yaml  state_estimator_config_IMU_only.yaml  thruster_config.yaml  thruster_config_triton_mini.yaml  waypoint_config.yaml  waypoint_config_2.yaml
src/triton_controls/launch/: state_estimator_launch.py  thrust_allocator_launch.py  trajectory_generator_launch.py  waypoint_marker_launch.py
src/triton_controls/src/: serial_subscriber.cpp  thrust_allocator.cpp  trajectory_generator.cpp  waypoint_marker.cpp  waypoint_sequence_manager.cpp
src/triton_controls/test/: test_thrust_allocator_launch.py  test_thrust_allocator_simple_config.py
src/triton_controls/triton_controls/: auv_transform_publisher.py  predetermined_route.py  predetermined_thrust.py  waypoint_marker_tester.py
src/triton_example/: CMakeLists.txt  README.md  package.xml
src/triton_example/config/: params_one.yaml  params_two.yaml
src/triton_example/launch/: example_launch.py
src/triton_example/src/: component_one.cpp  component_two.cpp
src/triton_example/test/: test_example_launch.py
src/triton_gate/: CMakeLists.txt  README.md  package.xml
src/triton_gate/config/: accuracy_opencv_model.xml  gate_detection.rviz
src/triton_gate/launch/: gate_detector_launch.py
src/triton_gate/src/: featurize.cpp  gate_detector.cpp  gate_detector1.cpp
src/triton_gazebo/: BBoxSubscriber.py  CMakeLists.txt  README.md  bounding_box_image_saver.py  package.xml  synchronized_image_saver.py  train_yolo.py
src/triton_gazebo/config/: rviz_config.rviz  rviz_ukf_teleop_sim_config.rviz  underwater_camera.yaml  yolov3-custom.cfg  yolov4-custom-3l.cfg  yolov4-custom.cfg
src/triton_gazebo/launch/: .gate_navigation_test.py.swp  gate_navigation_test.py  gate_navigation_test_triton_mini.py  gazebo_launch.py  gendata_launch.py  predetermined_route_test_launch.py  rviz_launch.py  simulation_bringup_launch.py  train_yolo_launch.py  ukf_teleop_sim_launch.py  underwater_camera_launch.py  waypoint_pid_test_launch.py  waypoint_test_launch.py
src/triton_gazebo/models/: README.md
src/triton_gazebo/src/: bounding_box_plugin.cpp  camera_orbit_plugin.cpp  ground_truth_sensor.cpp  hydrodynamics_plugin.cpp  random_camera_plugin.cpp  smooth_camera_plugin.cpp  thruster_driver_plugin.cpp  underwater_camera.cpp
src/triton_gazebo/test/: test_gazebo_launch.py  test_underwater_camera_launch.py
src/triton_gazebo/triton_gazebo/: auv_transform_publisher.py  bounding_box_image_saver.py  clean_data.py  train_yolo.py
src/triton_gazebo/worlds/: competition.world  competition_triton_mini.world  cube.world  thruster_test.world  triton_auv.world  uc_gendata.world  uc_test.world
src/triton_mission_planner/: CMakeLists.txt  README.md  package.xml
src/triton_mission_planner/config/: tree.xml
src/triton_mission_planner/launch/: mission_planner_launch.py
src/triton_mission_planner/src/: bin_tree.cpp  buoy_tree.cpp  gate_tree.cpp  mission_planner_root.cpp  path_tree.cpp  torpedo_tree.cpp
src/triton_object_recognition/: CMakeLists.txt  README.md  package.xml  pytest.ini
src/triton_object_recognition/config/: base_yolov3.yaml  custom_yolov3.yaml  custom_yolov4.yaml  realsense.yaml  tiny_yolov3.yaml  tiny_yolov4.yaml  tiny_yolov4_pipeline.yaml  yolov3.yaml
src/triton_object_recognition/launch/: base_yolov3.launch.py  tiny_yolov3_launch.py  tiny_yolov4_launch.py  tiny_yolov4_realsense_launch.py  yolov3.launch.py
src/triton_object_recognition/src/: bounding_box_pose_estimation.cpp  object_recognizer.cpp
src/triton_object_recognition/test/: test_object_recognition_launch.py
src/triton_pid_controller/: CMakeLists.txt  README.md  package.xml  pid_pitch.yaml  pid_pos.yaml
src/triton_pid_controller/config/: pid.yaml  pid_files.yaml  pid_y.yaml  pid_z.yaml
src/triton_pid_controller/launch/: triton_pid_controller.launch.py  triton_pid_controller_launch.py
src/triton_pid_controller/src/: triton_pid_controller.cpp
src/triton_pipeline/: README.md  package.xml  setup.cfg  setup.py
src/triton_pipeline/config/: camera1.yaml  camera1_info.yaml  camera2.yaml  camera2_info.yaml  circle_approach.yaml  example.yaml  example_sequence.yaml  imu_filter.yaml  object_recognition.yaml  pipeline_sequence.yaml  potato.yaml  surface_testing_triton_mini.rviz  task_gate_search.yaml  task_gate_yolo.yaml  waypoint_example.yaml  waypoint_marker.yaml
src/triton_pipeline/launch/: cameras_launch.py  pipeline_launch.py  pipeline_manager_launch.py  pool_testing_jetson_launch.py  pool_testing_surface_launch.py  pool_testing_triton_mini.py  pool_testing_triton_mini_auto.py  pool_testing_triton_mini_route.py  pool_testing_triton_mini_teleop.py  pool_testing_triton_mini_thrust.py  surface_testing_triton_mini.py  surface_testing_triton_mini_laptop.py  teensy_test_launch.py  thruster_testing.py  triton_pipeline.launch.py
src/triton_pipeline/test/: test_pipeline_configure.py  test_pipeline_init_success.py  test_pipeline_init_unsuccess.py  test_pipeline_launch.py  test_pipeline_manager.py  test_pipeline_run.py  test_pipeline_run_comp_not_exist.py  test_pipeline_run_not_config.py  test_pipeline_run_pkg_not_exist.py
src/triton_pipeline/triton_pipeline/: load_params.py  pipeline_manager.py  pipeline_sequence_manager.py
src/triton_sphere/: CMakeLists.txt  package.xml
src/triton_sphere/src/: sphere_detector.cpp
src/triton_sphere_detection/: CMakeLists.txt  package.xml
src/triton_sphere_detection/launch/: sphere_detection_launch.py
src/triton_sphere_detection/src/: sphere_detector.cpp
src/triton_sphere_detection/test/: test_sphere_detection_launch.py
src/triton_state_maintainer/: CMakeLists.txt  package.xml
src/triton_vision_utils/: CMakeLists.txt  package.xml  vision_utils.hpp
(+246 files in other folders)
