<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>triton_pipeline</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="logan@todo.todo">logan</maintainer>
  <license>TODO: License declaration</license>

  <depend>action_msgs</depend>
  <depend>rclpy</depend>
  <depend>composition_interfaces</depend>
  <depend>python3-yaml</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>phidgets_spatial</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>triton_interfaces</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
